istio-1.14.1/GKE/trafficsplitting2.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: reviews-rule2
  namespace: default
spec:
  hosts:
    - reviews.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: reviews.default.svc.cluster.local
            subset: v1
          weight: 70
        - destination:
            host: reviews.default.svc.cluster.local
            subset: v2
          weight: 30
        - destination:
            host: reviews.default.svc.cluster.local
            subset: v3
          weight: 0
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: reviews-rule2
  namespace: default
spec:
  host: reviews.default.svc.cluster.local
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
    - labels:
        version: v3
      name: v3
